--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Headding First</h1>
-    <h1>Headding Two</h1>
+    <h2>Headding Two</h2>
+    <h3>Headding Three</h3>
+    <h4>Headding Four</h4>
+    <h5>Headding Fifth</h5>
+    <h6>Headding Sixth</h6>
+
 </body>
 </html>
