--- a/head.html
+++ b/head.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- meta tag always use in head tag -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titele of the page</title>
-    <!-- <style>
+    <!-- title tag always use in head tag -->
+    <!-- style tag use in head tag -->
+    <!-- <style>   
         body{
             background-color: #414141;
             color: aliceblue;
