--- a/underedlist.html
+++ b/underedlist.html
@@ -6,7 +6,19 @@
     <title>Unorderd list</title>
 </head>
 <body>
-    <ul>
+    <ul type="disc">
+        <li>Bread</li>
+        <li>Jam</li>
+        <li>Elaychi</li>
+        <li>Samosa</li>
+    </ul>
+    <ul type="circle">
+        <li>Bread</li>
+        <li>Jam</li>
+        <li>Elaychi</li>
+        <li>Samosa</li>
+    </ul>
+    <ul type="square">
         <li>Bread</li>
         <li>Jam</li>
         <li>Elaychi</li>
