--- a/olderedlist.html
+++ b/olderedlist.html
@@ -6,7 +6,9 @@
     <title>Olderd List</title>
 </head>
 <body>
+   <h1>Ordered List</h1>
     <ol>
+        <!-- default type 1,2,3 -->
         <li>Bread</li>
         <li>Jam</li>
         <li>Elaychi</li>
