--- a/Formating.html
+++ b/Formating.html
@@ -13,7 +13,7 @@
     <p> This is <strong>important and Strong</strong> </p>
     <p> This is <del>important and Strong</del> </p>
     <p> This is <mark>Mark</mark> </p>
-    <p> This is <i> Emapsis</i> </p>
+    <p> This is <i> Italic</i> </p>
     <p> This is <em>Emapsis</em> </p>
     <p> This is <small>Small</small> </p>
     <p> Hello <sub>subscript</sub> </p>
