--- a/Formating.html
+++ b/Formating.html
@@ -18,5 +18,6 @@
     <p> This is <small>Small</small> </p>
     <p> Hello <sub>subscript</sub> </p>
     <p> Hello <sup>Superscript</sup> </p>
+    <p> Hello <u>Underline</u> </p>
 </body>
 </html>
