Add meta tag in code

--- a/head.html
+++ b/head.html
@@ -3,6 +3,7 @@
 <head>
     <!-- meta tag always use in head tag -->
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titele of the page</title>
     <!-- title tag always use in head tag -->
